# project1_zhukova_maria_m25-555

./: .gitignore  Makefile  README.md  demo_labyrinth_game.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
